# Auto_Jobs_Applier_AIHawk

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .yamllint  ANSWERS_UTILS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  ai_adapter.py  answer_editor.py  app_config.py  class.MD  cleanse_answers.py  config.py  constants.py  docker-compose.yml  documentation.md  gpt.py  install_auto_linux.sh  job.py  linkedIn_authenticator.py  linkedIn_bot_facade.py  linkedIn_easy_applier.py  linkedIn_job_manager.py  main.py  open_ai_calls.json  py-template.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt  resume.py  resume_generator_integration.py  resume_yaml_generator.py  ruff.toml  (+6 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
JobApply/: pyvenv.cfg
assets/: resume_schema.yaml
data_folder/: answers.json  config.yaml  plain_text_resume.yaml  secrets.yaml  work_preferences.yaml
data_folder_example/: config.yaml  plain_text_resume.yaml  resume_liam_murphy.txt  secrets.yaml  work_preferences.yaml
docs/: CONTRIBUTING.md  LICENSE  development_diagrams.md  project_management.md  workflow_diagrams.md
lib_resume_builder_AIHawk/: config.py  gpt_resume.py  gpt_resume_job_description.py  resume.py  resume_generator.py  style_manager.py  template_base.py  utils.py
plugins/: stylistic_rules.py
resume_template/: casual_markdown.js  reorganizeHeader.js  resume.css
src/: Hugging_Face.py  aihawk_authenticator.py  aihawk_bot_facade.py  aihawk_easy_applier.py  gpt.py  (+20 more)
(+96 files in other folders)
