[project]
name = "auto-jobs-applier-aihawk"
version = "0.1.0"
description = "Auto_Jobs_Applier_AIHawk is a tool that automates the jobs application process. Utilizing artificial intelligence, it enables users to apply for multiple job offers in an automated and personalized way."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "lib-resume-builder-aihawk",
    "httpx~=0.27.2",
    "inputimeout==1.0.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "langchain==0.2.11",
    "langchain-anthropic>=0.1.23",
    "langchain-huggingface>=0.0.3",
    "langchain-community==0.2.10",
    "langchain-core===0.2.36",
    "langchain-google-genai==1.0.10",
    "langchain-ollama==0.1.3",
    "langchain-openai==0.1.17",
    "langchain-text-splitters==0.2.2",
    "langsmith==0.1.93",
    "levenshtein==0.25.1",
    "loguru==0.7.2",
    "openai==1.37.1",
    "pdfminer-six==20221105",
    "pytest>=8.3.3",
    "python-dotenv~=1.0.1",
    "pyyaml~=6.0.2",
    "regex==2024.7.24",
    "reportlab==4.2.2",
    "selenium==4.9.1",
    "webdriver-manager==4.0.2",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lib-resume-builder-aihawk = { git = "https://github.com/feder-cr/lib_resume_builder_AIHawk.git" }
